# sc-qdts

./: .gitignore  CMakeLists.txt  README.md
HelpSource/Classes/: NQDTS.schelp  NQDTSSolver.schelp  QDTS.schelp  QDTSSolver.schelp
HelpSource/Guides/: QDTS_Guide.schelp
examples/: NQDTS_examples.scd  QDTS_examples.scd
plugins/NQDTSSolver/: NQDTSSolver.cpp  nqdts_weights.h
plugins/QDTSSolver/: QDTSSolver.cpp
sc-classes/: NQDTSSolver.sc  QDTSSolver.sc
verification/: NQDTS_comparison.scd  QDTS_verification.scd
